parser/src/snapshots/rustpython_parser__function__tests__lambda_kw_only_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            range: 0..26,
            custom: (),
            node: Expr(
                StmtExpr {
                    value: Attributed {
                        range: 0..26,
                        custom: (),
                        node: Lambda(
                            ExprLambda {
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [],
                                    vararg: None,
                                    kwonlyargs: [
                                        Attributed {
                                            range: 10..11,
                                            custom: (),
                                            node: ArgData {
                                                arg: "a",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 13..14,
                                            custom: (),
                                            node: ArgData {
                                                arg: "b",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 19..20,
                                            custom: (),
                                            node: ArgData {
                                                arg: "c",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    kw_defaults: [
                                        Attributed {
                                            range: 15..17,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        20,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                        Attributed {
                                            range: 21..23,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        30,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                    ],
                                    kwarg: None,
                                    defaults: [],
                                },
                                body: Attributed {
                                    range: 25..26,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ],
)
