parser/src/snapshots/rustpython_parser__function__tests__lambda_no_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Located {
            range: 0..9,
            custom: (),
            node: Expr(
                StmtExpr {
                    value: Located {
                        range: 0..9,
                        custom: (),
                        node: Lambda(
                            ExprLambda {
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [],
                                },
                                body: Located {
                                    range: 8..9,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ],
)
