parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_and_kw_only_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            range: 0..26,
            custom: (),
            node: Expr(
                StmtExpr {
                    value: Attributed {
                        range: 0..26,
                        custom: (),
                        node: Lambda(
                            ExprLambda {
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [
                                        Attributed {
                                            range: 7..8,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "a",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 10..11,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "b",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 13..14,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "c",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [
                                        Attributed {
                                            range: 19..20,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "d",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 22..23,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "e",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [],
                                },
                                body: Attributed {
                                    range: 25..26,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                0,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ],
)
