parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_args.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            range: 0..17,
            custom: (),
            node: Expr(
                StmtExpr {
                    value: Attributed {
                        range: 0..17,
                        custom: (),
                        node: Lambda(
                            ExprLambda {
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [
                                        Attributed {
                                            range: 7..8,
                                            custom: (),
                                            node: ArgData {
                                                arg: "a",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 10..11,
                                            custom: (),
                                            node: ArgData {
                                                arg: "b",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 13..14,
                                            custom: (),
                                            node: ArgData {
                                                arg: "c",
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [],
                                },
                                body: Attributed {
                                    range: 16..17,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ],
)
