parser/src/snapshots/rustpython_parser__function__tests__lambda_pos_args_with_defaults.snap
---
source: parser/src/function.rs
expression: parse_ast
---
Ok(
    [
        Attributed {
            range: 0..23,
            custom: (),
            node: Expr(
                StmtExpr {
                    value: Attributed {
                        range: 0..23,
                        custom: (),
                        node: Lambda(
                            ExprLambda {
                                args: Arguments {
                                    posonlyargs: [],
                                    args: [
                                        Attributed {
                                            range: 7..8,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "a",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 10..11,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "b",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                        Attributed {
                                            range: 16..17,
                                            custom: (),
                                            node: ArgData {
                                                arg: Identifier(
                                                    "c",
                                                ),
                                                annotation: None,
                                                type_comment: None,
                                            },
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kw_defaults: [],
                                    kwarg: None,
                                    defaults: [
                                        Attributed {
                                            range: 12..14,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        20,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                        Attributed {
                                            range: 18..20,
                                            custom: (),
                                            node: Constant(
                                                ExprConstant {
                                                    value: Int(
                                                        30,
                                                    ),
                                                    kind: None,
                                                },
                                            ),
                                        },
                                    ],
                                },
                                body: Attributed {
                                    range: 22..23,
                                    custom: (),
                                    node: Constant(
                                        ExprConstant {
                                            value: Int(
                                                1,
                                            ),
                                            kind: None,
                                        },
                                    ),
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ],
)
